2011-08-18  Tao Liu  <taoliu@jimmy.harvard.edu>
	MACS version 2.0.7 (tag:alpha)

	* bin/macsdiff renamed to bin/bdgdiff

	Now this script will work as a low-level finetuning tool as bdgcmp
	and bdgpeakcall.

	* bin/macs2diff

	A new script to take treatment and control files from two
	condition, calculate fragment size, use local poisson to get
	pvalues and BH process to get qvalues, then combine 4-ways result
	to call differential sites.

	This script can use upto 4 cpus to speed up 4-ways calculation. (
	I am trying multiprocessing in python. )

	* MACS2/Constants.py, MACS2/IO/cBedGraph.pyx,
	MACS2/IO/cScoreTrack.pyx, MACS2/OptValidator.py,
	MACS2/PeakModel.py, MACS2/cPeakDetect.pyx

	All above files are modified for the new macs2diff script.

2011-07-25  Tao Liu  <vladimir.liu@gmail.com>
	MACS version 2.0.6 (tag:alpha)

	* bin/macsdiff

	A script to call differential regions. A naive way is introduced
	to find the regions where:

	1. signal from condition 1 is larger than input 1 and condition 2 --
	unique region in condition 1;
	2. signal from condition 2 is larger than input 2 and condition 1
	-- unique region in condition 2;
	3. signal from condition 1 is larger than input 1, signal from
	condition 2 is larger than input 2, however either signal from
	condition 1 or 2 is not larger than the other.

	Here 'larger' means the pvalue or qvalue from a Poisson test is
	under certain cutoff.

	(I will make another script to wrap up mulitple scripts for
	differential calling)

2011-07-07  Tao Liu  <vladimir.liu@gmail.com>
	MACS version 2.0.5 (tag:alpha)

	* bin/macs2, MACS2/cPeakDetect.py, MACS2/IO/cScoreTrack.pyx,
	MACS2/IO/cPeakIO.pyx

	Use hash to store peak information. Add back the feature to deal
	with data without control.

	Fix bug which incorrectly allows small peaks at the end of
	chromosomes.

	* bin/bdgpeakcall, bin/bdgcmp

	Fix bugs. bdgpeakcall can output encodePeak format.

2011-06-22  Tao Liu  <taoliu@jimmy.harvard.edu>
	MACS version 2.0.4 (tag:alpha)