@@ -1,5 +1,5 @@
-MACS_VERSION = "2.0.7 20110820 (tag:alpha)"
-MACSDIFF_VERSION = "0.1.0 20110820 (tag:alpha)"
+MACS_VERSION = "2.0.7 20110821 (tag:alpha)"
+MACSDIFF_VERSION = "1.0.0 20110821 (tag:alpha)"
 MAX_PAIRNUM = 1000
 MAX_LAMBDA  = 100000
 FESTEP      = 20
